--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body{
     width: 70%;
     height: 100vh;
     margin: 0 auto;
-    background-color: red;
+    background-color: #0072b5;
 }
 
 .container ul{
