--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body{
     margin: 0 auto;
     background-color:#005180;
     box-shadow:5px 5px 15px #0072b5;
+    border-radius:10px;
 }
 
 .container ul{
