--- a/index.css
+++ b/index.css
@@ -3,10 +3,10 @@ body{
     background-color:#004166;
 }
 .container{
-    width: 70%;
-    height: 100vh;
+    width: 60%;
+    height: 80vh;
     margin: 0 auto;
-    background-color:#005180;
+    background-color:#004166;
     box-shadow:5px 5px 15px #0072b5;
     border-radius:10px;
 }
@@ -14,6 +14,7 @@ body{
 .container ul{
  display: flex;
  justify-content: space-around;
+ justify-items: center;
  color: white;
  list-style-type: none;
  text-decoration: none;
